--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -3,7 +3,7 @@
 [drones]
 ; nxt1.local
 ; nxt2.local
-nxt3.local enable_vision=true
+nxt3.local enable_vision=false
 ; nxt4.local
 ; nxt5.local
 ; nxt6.local 
