--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -3,13 +3,14 @@
 [drones]
 ; nxt1.local
 ; nxt2.local
-nxt3.local enable_vision=true
+nxt3.local enable_vision=false
 ; nxt4.local
 ; nxt5.local
 ; nxt6.local 
 ; nxt7.local
 ; nxt8.local
 ; nxt9.local
+; nxt10.local
 [drones:vars]
 ansible_become_password=orin
 
