--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,16 +1,17 @@
 # you can change the value of enable_vision in group_vars/all per drone 
 # by appending it at the end: nxt1.local enable_vision=true
 [drones]
-; nxt1.local enable_vision=false
-nxt2.local enable_vision=false
+; nxt1.local
+; nxt2.local enable_vision=false
 ; nxt3.local enable_vision=true
 ; nxt4.local
 ; nxt5.local
-; nxt6.local enable_vision=false
+nxt6.local enable_vision=true
 ; nxt7.local
 ; nxt8.local
 ; nxt9.local
-; nxt10.local
+nxt10.local enable_vision=true
+
 [drones:vars]
 ansible_become_password=orin
 
