--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -6,7 +6,7 @@
 ; nxt3.local enable_vision=true
 ; nxt4.local
 ; nxt5.local
-nxt6.local enable_vision=true
+; nxt6.local enable_vision=true
 ; nxt7.local
 ; nxt8.local
 ; nxt9.local
