--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,11 +2,11 @@
 # by appending it at the end: nxt1.local enable_vision=true
 [drones]
 ; nxt1.local
-; nxt2.local enable_vision=false
-; nxt3.local enable_vision=true
+; nxt2.local enable_vision=true
+nxt3.local enable_vision=true
 ; nxt4.local
 ; nxt5.local
-; nxt6.local enable_vision=true
+nxt6.local enable_vision=true
 ; nxt7.local
 ; nxt8.local
 ; nxt9.local
