--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: SwarmNXT
+site_name: SwarmNxt
 repo_url: https://github.com/lis-epfl/swarm-nxt
 repo_name: GitHub
 edit_uri: edit/main/docs/
