--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -4,9 +4,6 @@ on:
     push:
         branches:
             - main
-            - devel
-        tags:
-            - 'v*'
         paths:
             - 'docs/**'
             - 'mkdocs.yml'
@@ -34,23 +31,23 @@ jobs:
 
         - name: Build documentation
           run: mkdocs build -s
-        
+
         - name: Make artifact
           uses: actions/upload-artifact@v4
-          with: 
+          with:
               name: website
               path: site/
               retention-days: 1
-    
+
     deploy:
-        if: github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'devel' || startsWith(github.ref, 'refs/tags/v'))
+        if: github.event_name == 'push' && github.ref_name == 'main'
         runs-on: ubuntu-latest
         needs: build-docs
+        permissions:
+          contents: write
         steps:
           - name: Checkout repository
             uses: actions/checkout@v4
-            with:
-              fetch-depth: 0
 
           - name: Set up Python
             uses: actions/setup-python@v5
@@ -66,16 +63,5 @@ jobs:
                 git config --global user.name 'github-actions[bot]'
                 git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-          - name: Deploy documentation with mike
-            run: |
-              # Determine version based on branch/tag
-              if [[ "${{ github.ref_name }}" == "main" ]]; then
-                mike deploy --push --update-aliases latest main
-                mike set-default --push latest
-              elif [[ "${{ github.ref_name }}" == "devel" ]]; then
-                mike deploy --push --update-aliases devel
-              elif [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-                TAG_NAME="${{ github.ref_name }}"
-                mike deploy --push --update-aliases "$TAG_NAME"
-              fi
-
+          - name: Deploy documentation
+            run: mkdocs gh-deploy --force
